# ddd-clean-architecture-backend

./: .gitignore
go/: Dockerfile  README.md  docker-compose.yml  go.mod
go/cmd/server/: main.go
go/internal/application/services/: order_service.go
go/internal/domain/customer/: customer.go
go/internal/domain/order/: aggregate.go  aggregate_test.go  events.go  repository.go
go/internal/domain/product/: product.go
go/internal/domain/shared/: domain.go  events.go  types.go
go/pkg/errors/: errors.go
go/pkg/logger/: logger.go
go/pkg/validator/: validator.go
go/scripts/: init.sql
rust/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
rust/migrations/: init.sql
rust/src/: main.rs
rust/src/app/: mod.rs
rust/src/domain/: customer.rs  error.rs  event.rs  mod.rs  money.rs  order.rs  product.rs
rust/src/infra/: eventbus.rs  mod.rs  postgres.rs
rust/src/port/: http.rs
typescript/: package.json  worklog.md
typescript/docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
typescript/prisma/: schema.prisma
typescript/src/application/: index.ts
typescript/src/application/dto/: index.ts
typescript/src/application/ports/: cache-service.port.ts  email-service.port.ts  event-bus.port.ts  index.ts  payment-gateway.port.ts
typescript/src/application/use-cases/: index.ts
typescript/src/domain/: index.ts
typescript/src/domain/common/: aggregate-root.base.ts  (+4 more)
typescript/src/infrastructure/: index.ts
typescript/src/presentation/: index.ts
typescript/src/shared/: index.ts
(+58 files in other folders)
